--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -135,13 +135,13 @@
                         <wm-panel iconclass="wi wi-notepad" name="panel1" title="Licenses" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL">
-                                    <wm-grid-column binding="vendorLicenseTypes.licenseType" caption="License Type" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="VendorLicenseTypes" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="licenseNumber" caption="License Number" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="issuedDate" caption="Issued Date" type="date" generator="assigned" edit-widget-type="date" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="expirationDate" caption="Expiration Date" type="date" generator="assigned" edit-widget-type="date" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="scope" caption="Scope" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                    <wm-grid-column binding="vendorLicenseTypes.licenseType" caption="License Type" type="string" generator="assigned" show="true" related-entity-name="VendorLicenseTypes" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="licenseNumber" caption="License Number" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="issuedDate" caption="Issued Date" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="expirationDate" caption="Expiration Date" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="scope" caption="Scope" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                     <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
@@ -153,7 +153,8 @@
                                                 <wm-form-field name="licenseNumber" displayname="License Number" show="true" primary-key="false" generator="assigned" key="licenseNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="6" name="gridcolumn29">
-                                                <wm-form-field name="issuedDate" displayname="Issued Date" show="true" primary-key="false" generator="assigned" key="issuedDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                                <wm-form-field name="issuedDate" displayname="Issued Date" show="true" primary-key="false" generator="assigned" key="issuedDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
+                                                datepattern="MM-dd-yyyy"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow14">
@@ -162,7 +163,8 @@
                                                 placeholder="Enter value"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="6" name="gridcolumn31">
-                                                <wm-form-field name="expirationDate" displayname="Expiration Date" show="true" primary-key="false" generator="assigned" key="expirationDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                                <wm-form-field name="expirationDate" displayname="Expiration Date" show="true" primary-key="false" generator="assigned" key="expirationDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
+                                                datepattern="MM-dd-yyyy"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow15">
