View Vendor Profile for Muni Employee Added for Pending Vendors New files added - [ProcessForms.css,ProcessForms.variables.json,ProcessForms.js,ProcessForms.html] Files modified - [Main.variables.json,pages-config.json,MyMunicipality.html,CompanyProfile.variables.json,app.variables.json,ManageMunicipalityVendors.js,ManageMunicipalityVendors.variables.json,ManageMunicipalityVendors.html]

--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -35,7 +35,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn5" horizontalalign="center" padding="2em unset">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ProcessForms.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid3">
                                 <wm-gridrow height="100%" name="gridrow4">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn8" class="col-xs-3">
